# Load-Balancer

./: README.md
Load_Balancer/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
Load_Balancer/.cmake/api/v1/reply/: cache-v2-44a1e2fc3e34255009dc.json  cmakeFiles-v1-f358db4654a0868914a0.json  codemodel-v2-8cd908d032bc52738690.json  index-2024-11-19T20-30-55-0523.json  target-Load_Balancer-Debug-e6a5c6d477d126f10a1e.json  target-runTests-Debug-0e6bbda9ed03170a7304.json
Load_Balancer/include/: Core.h  CoreManager.h  LoadBalancer.h  Task.h  TaskManager.h
Load_Balancer/src/: Core.cpp  CoreManager.cpp  LoadBalancer.cpp  Task.cpp  TaskManager.cpp  main.cpp
Load_Balancer/tests/: test_CoreManager.cpp  test_LoadBalancer.cpp  test_TaskManager.cpp
